// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StartOverComponentFactory AssessmentStartOverFactory getStartOverComponent 1`] = `
<StartOverDropdown
  allTestSuffix="Assessment"
  dropdownDirection="down"
  rightPanelOptions={
    {
      "showTest": true,
    }
  }
  singleTestSuffix="the title"
  switcherStartOverPreferences={
    {
      "showTest": true,
    }
  }
/>
`;

exports[`StartOverComponentFactory AssessmentStartOverFactory getStartOverComponent: StartOverDropdown props 1`] = `undefined`;

exports[`StartOverComponentFactory AssessmentStartOverFactory getStartOverMenuItem 1`] = `
<DocumentFragment>
  <div
    role="menuitem"
  >
    <mock-startoverdropdown
      alltestsuffix="Assessment"
      dropdowndirection="left"
      rightpaneloptions="[object Object]"
      singletestsuffix="the title"
      switcherstartoverpreferences="[object Object]"
    />
  </div>
</DocumentFragment>
`;

exports[`StartOverComponentFactory AssessmentStartOverFactory getStartOverMenuItem: StartOverDropdown props 1`] = `
{
  "allTestSuffix": "Assessment",
  "buttonRef": undefined,
  "dropdownDirection": "left",
  "openDialog": undefined,
  "rightPanelOptions": {
    "showTest": true,
  },
  "singleTestSuffix": "the title",
  "switcherStartOverPreferences": {
    "showTest": true,
  },
}
`;

exports[`StartOverComponentFactory FastpassStartOverFactory getStartOverComponent renders scanning is false => component matches snapshot 1`] = `
<InsightsCommandButton
  className="startOverMenuItem"
  data-automation-id="start-over"
  disabled={false}
  iconProps={
    {
      "className": "startOverMenuItemIcon",
      "iconName": "ArrowClockwiseRegular",
    }
  }
  onClick={[Function]}
  text="Start over"
/>
`;

exports[`StartOverComponentFactory FastpassStartOverFactory getStartOverComponent renders scanning is false => component matches snapshot: StartOverDropdown props 1`] = `undefined`;

exports[`StartOverComponentFactory FastpassStartOverFactory getStartOverComponent renders scanning is true => component matches snapshot 1`] = `
<InsightsCommandButton
  className="startOverMenuItem"
  data-automation-id="start-over"
  disabled={true}
  iconProps={
    {
      "className": "startOverMenuItemIcon",
      "iconName": "ArrowClockwiseRegular",
    }
  }
  onClick={[Function]}
  text="Start over"
/>
`;

exports[`StartOverComponentFactory FastpassStartOverFactory getStartOverComponent renders scanning is true => component matches snapshot: StartOverDropdown props 1`] = `undefined`;

exports[`StartOverComponentFactory FastpassStartOverFactory getStartOverMenuItem renders scanning is false => component matches snapshot 1`] = `
{
  "className": "startOverMenuItem",
  "data-automation-id": "start-over",
  "disabled": false,
  "iconProps": {
    "className": "startOverMenuItemIcon",
    "iconName": "ArrowClockwiseRegular",
  },
  "onClick": [Function],
  "text": "Start over",
}
`;

exports[`StartOverComponentFactory FastpassStartOverFactory getStartOverMenuItem renders scanning is false => component matches snapshot: StartOverDropdown props 1`] = `undefined`;

exports[`StartOverComponentFactory FastpassStartOverFactory getStartOverMenuItem renders scanning is true => component matches snapshot 1`] = `
{
  "className": "startOverMenuItem",
  "data-automation-id": "start-over",
  "disabled": true,
  "iconProps": {
    "className": "startOverMenuItemIcon",
    "iconName": "ArrowClockwiseRegular",
  },
  "onClick": [Function],
  "text": "Start over",
}
`;

exports[`StartOverComponentFactory FastpassStartOverFactory getStartOverMenuItem renders scanning is true => component matches snapshot: StartOverDropdown props 1`] = `undefined`;

exports[`StartOverComponentFactory QuickAssessStartOverFactory getStartOverComponent 1`] = `
<StartOverDropdown
  allTestSuffix="Quick Assess"
  dropdownDirection="down"
  rightPanelOptions={
    {
      "showTest": true,
    }
  }
  singleTestSuffix=""
  switcherStartOverPreferences={
    {
      "showTest": false,
    }
  }
/>
`;

exports[`StartOverComponentFactory QuickAssessStartOverFactory getStartOverComponent: StartOverDropdown props 1`] = `undefined`;

exports[`StartOverComponentFactory QuickAssessStartOverFactory getStartOverMenuItem 1`] = `
<DocumentFragment>
  <div
    role="menuitem"
  >
    <mock-startoverdropdown
      alltestsuffix="Quick Assess"
      dropdowndirection="left"
      rightpaneloptions="[object Object]"
      singletestsuffix=""
      switcherstartoverpreferences="[object Object]"
    />
  </div>
</DocumentFragment>
`;

exports[`StartOverComponentFactory QuickAssessStartOverFactory getStartOverMenuItem: StartOverDropdown props 1`] = `
{
  "allTestSuffix": "Quick Assess",
  "buttonRef": undefined,
  "dropdownDirection": "left",
  "openDialog": undefined,
  "rightPanelOptions": {
    "showTest": true,
  },
  "singleTestSuffix": "",
  "switcherStartOverPreferences": {
    "showTest": false,
  },
}
`;